fix: change z-index for popup menu

--- a/front/src/scss/component/_popup.scss
+++ b/front/src/scss/component/_popup.scss
@@ -63,5 +63,5 @@
     height: 100vh;
 
     backdrop-filter: blur(10px) brightness(80%);
-    z-index: 2;
+    z-index: 10;
 }
