--- a/front/src/scss/units/main/_main-one.scss
+++ b/front/src/scss/units/main/_main-one.scss
@@ -404,7 +404,8 @@
         padding-right: 20px;
 
         border: none;
-
+        border-radius: 0 95px 95px 0;
+        
         font-size: 20px;
         color: rgb(0, 0, 0);
         background-color: transparent;
